--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -12,8 +12,10 @@
       <p>GitHub is a cloud-based platform that uses Git for version control and collaboration. It provides a space where developers can host their Git repositories, collaborate on projects, and share code with others.</p>
     </header>
 
-    <article>
+    <article id="flex-container">
+
       <article title="git-dfn">
+        <div class="article-1">
           <h2>What is Git?</h2>
           <details>
             <summary>Git Definition</summary>
@@ -21,9 +23,11 @@
               is a distributed version control system (DVCS) that helps developers track changes to code, collaborate efficiently, and maintain different versions of a project. It allows teams to work simultaneously on the same codebase without overwriting each other’s work. By keeping a complete history of changes, Git makes it easy to revert to previous versions and work offline. It also supports code reviews and ensures code quality by enabling collaborative workflows.
             </p>
           </details>
+        </div>
       </article>
 
       <article title="git-uses">
+        <div class="article-2">
           <h2>Why do developers need Git</h2>
           <details>
             <summary>Importance of Git</summary>
@@ -31,9 +35,11 @@
               Developers need Git because it enhances teamwork, provides a backup of the codebase, and makes it easier to track changes. It supports branching and merging, which allows developers to work on separate features or fixes without affecting the main project. This means parallel development can happen without interference.
             </p>
             </details>
+          </div>
       </article>
 
       <article title="git-branch">
+        <div class="article-3">
           <h2>What is a branch in Git?</h2>
           <details>
             <summary>branch Definition</summary>
@@ -41,8 +47,9 @@
               A branch in Git is an isolated version of the repository where developers can work on new features, bug fixes, or experiments. Branches help in maintaining a stable main codebase while allowing independent development. Once changes are finalized, the branch can be merged back into the main project. This approach ensures that experimental work doesn’t affect production code until it’s ready.
             </p>
           </details>
-
+        </div>
       </article>
+
     </article>
 
     <footer>
