--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -22,6 +22,9 @@
             <p>
               is a distributed version control system (DVCS) that helps developers track changes to code, collaborate efficiently, and maintain different versions of a project. It allows teams to work simultaneously on the same codebase without overwriting each other’s work. By keeping a complete history of changes, Git makes it easy to revert to previous versions and work offline. It also supports code reviews and ensures code quality by enabling collaborative workflows.
             </p>
+            <p>
+              More about <a target="_blank" href="https://www.atlassian.com/git/tutorials/what-is-git">git</a>
+            </p>
           </details>
         </div>
       </article>
@@ -34,6 +37,9 @@
             <p>
               Developers need Git because it enhances teamwork, provides a backup of the codebase, and makes it easier to track changes. It supports branching and merging, which allows developers to work on separate features or fixes without affecting the main project. This means parallel development can happen without interference.
             </p>
+            <p>
+              More about <a href="https://www.futurelearn.com/info/courses/collaborative-coding-with-git/0/steps/213616#:~:text=Git%20can%20facilitate%20distributed%20collaborative,the%20same%20set%20of%20files.">importance of git</a>
+            </p>
             </details>
           </div>
       </article>
@@ -45,6 +51,9 @@
             <summary>branch Definition</summary>
             <p>
               A branch in Git is an isolated version of the repository where developers can work on new features, bug fixes, or experiments. Branches help in maintaining a stable main codebase while allowing independent development. Once changes are finalized, the branch can be merged back into the main project. This approach ensures that experimental work doesn’t affect production code until it’s ready.
+            </p>
+            <p>
+              More about <a href="https://medium.com/@jacoblogan98/understanding-git-branching-5d01f3dda541">branching in git</a>
             </p>
           </details>
         </div>
