styled the main class in CSS

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="/Wireframe/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
   </head>
   <body>
    
@@ -14,7 +17,7 @@
     </header>
     <div class="main">
       <article class="hero">
-        <img src="photos/download.png">
+        <img src="photos/logo.png" class="">
         <h2>What is Git?</h2>
         <p>Git is a free, open-source version control system that helps developers track changes to their code and projects.
           the most widely used version control system in the world and is considered the modern standard for software
@@ -26,24 +29,20 @@
 
     </div>
    
-    <div class="content">
+    <!--<div class="content">
       <article class="card">
-      <img>
+      <img src="photos/features-of-git.jpg" class="photo-card">
       <h2>Why do developers need Git?</h2>
       <p>Collaboration: Git allows multiple developers to work on the same project simultaneously without interfering with each
-      other's progress. It can also help resolve conflicts that may arise when working on the same files.
+      other's progress. 
       Version storage: Git can manage multiple versions of a project, keeping the source code organized.
       Previous version restoration: Git can help restore previous versions of a project.
-      Tracking changes: Git tracks changes made to files, so developers have a record of what has been done and can revert to
-      specific versions.
-      Agile workflow: Git facilitates an agile workflow where developers are encouraged to share smaller changes more
-      frequently.
-      Open source: Git is free and open-source software that is maintained by Linux</p>
+    </p>
       <a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank"><button>Read More</button></a>
 
     </article>
     <article class="card">
-      <img>
+      <img src="photos/branch.png" class="photo-card">
       <h2>What is a branch in Git?</h2>
       <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no
       matter how big or how small—you spawn a new branch to encapsulate your changes.</p>
