fixing footer at the bottom of the veiwpoint

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,7 +12,7 @@
   <body>
    
     <header>
-      <h1>Git for dummies</h1>
+      <h1>Git for Dummies</h1>
 
     </header>
     <div class="main">
@@ -29,7 +29,7 @@
 
     </div>
    
-    <!--<div class="content">
+    <div class="content">
       <article class="card">
       <img src="photos/features-of-git.jpg" class="photo-card">
       <h2>Why do developers need Git?</h2>
@@ -53,6 +53,7 @@
     </div>
     
     <footer>
+      <p>&copy; 2024 Git for Dummies | Designed by <a href="https://zohreh-kazemianpour-web-developer.netlify.app" target="_blank" id="business-card">Zohreh Kazemianpour</a></p>
 
     </footer>
    
