img src property changed so that images may load. Focus psuedo-element added to page. Footer updated.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="container">
         <h1 class="heading-primary center">Understanding Git</h1>
-        <p class="header-text center">A developers #1 tool</p>
+        <p class="header-text center">A developer's #1 tool</p>
       </div>
     </header>
 
@@ -27,7 +27,7 @@
             <div class="grid grid--3-row">
               <img
                 class="article-img"
-                src="/img/article-1.png"
+                src="img/article-1.png"
                 alt="Git logo"
               />
               <div>
@@ -56,7 +56,7 @@
             <div class="grid grid--3-row">
               <img
                 class="article-img"
-                src="/img/article-2.jpg"
+                src="img/article-2.jpg"
                 alt="Computer screen with code on it"
               />
               <div>
@@ -85,7 +85,7 @@
             <div class="grid grid--3-row">
               <img
                 class="article-img"
-                src="/img/article-3.jpg"
+                src="img/article-3.jpg"
                 alt="Sceenshot of Git branch"
               />
               <div>
@@ -115,7 +115,7 @@
 
     <footer class="footer">
       <div class="container center">
-        <p class="footer-text">Here is my footer</p>
+        <p class="footer-text">Rashaad Ebrahim &copy; 2024</p>
       </div>
     </footer>
   </body>
