update header and structure in html and css

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,11 +13,16 @@
 
 <body>
   <header>
-      <h1>Git and uses</h1>
+    <h1>Git and uses</h1>
+    <p>
+      Git is a free and open source distributed version control system designed to handle everything from small to very
+      large projects with speed and efficiency.
+    </p>
   </header>
   <main>
     <section class="hero">
-      <div class="img-hero">
+      <div>
+        <img src="/Wireframe/img/git.giff.webp" alt="" class="img-hero">
       </div>
       <h2>What is Git</h2>
       <p class="overlay">
@@ -30,10 +35,12 @@
         developer, it's helpful to learn more about the position and the steps needed to begin your career.
       </p>
       <button></button>
-    </section >
+    </section>
     <section class="wrapper">
-      <article class="wrapper left">
-        <h2>What is Git</h2>
+      <article class="article-wrapper">
+        <div>
+          <img src="/Wireframe/img/git.jpg" alt="image of git" class="img-article">
+        </div>
         <p>
           Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
           covered!
@@ -45,11 +52,14 @@
           junior
           developer, it's helpful to learn more about the position and the steps needed to begin your career.
         </p>
-        <button class="btn-article"></button>
+        <h2>What is Git</h2>
+        <button class="btn-article">I am button</i></button>
       </article>
 
-      <article class="wrappe-right">
-        <h2>What is Git</h2>
+      <article class="article-wrapper">
+        <div>
+          <img src="/Wireframe/img/git.png" alt="image of git" class="img-article">
+        </div>
         <p>
           Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
           covered!
@@ -61,12 +71,13 @@
           junior
           developer, it's helpful to learn more about the position and the steps needed to begin your career.
         </p>
-        <button></button>
+        <h2>What is Git</h2>
+        <button>I am button</button>
       </article>
     </section>
   </main>
   <footer class="data">
-    <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"></i></p>
+    <p class="media-text">&copy  <i class="fa-regular fa-face-laugh-wink"></i></p>
     <div class="social">
       <a class="facebook" href="https://www.facebook.com/groups/front.designer"><i
           class="fa-brands fa-facebook"></i></a>
