--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,15 +13,47 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
+
+   <div class="wrapper">
+      
+      <p>Please fill out the form below to place your order.</p>
+      <form>
+        <fieldset>
+          <legend>Personal details</legend>
+          <label for="name"> Your name</label>
+          <input type="text" id="name" name="name">
+          <label for="phone">Phone number</label>
+          <input type="tel" id="phone" name="phone">
+          <label for="email">email</label>
+          <input type="email" id="email" name="email">
+        </fieldset>
+
+        <fieldset>
+          <legend> Order details</legend>
+          <p>Please select the color and size.</p>
+          <label for="size">Size</label>
+          <input type="text">
+          <label for="color">color</label>
+          <input type="text">
+        </fieldset>
+
+        <fieldset>
+          <legend>Delivery details</legend>
+          <p>Pleaase choose a delivery date in the next 4 weeks.</p>
+          <label for="date">Requeste date</label>
+          <input type="date" id="date" name="date">
+        </fieldset>
+
+      </form>
+
+    </div>
+   
+ 
 
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Samira Hekmati</h2>
   </footer>
 </body>
 
