adding first child pseudo class

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -33,16 +33,28 @@
       <article class="card">
       <img src="photos/features-of-git.jpg" class="photo-card">
       <h2>Why do developers need Git?</h2>
-      <p>Collaboration: Git allows multiple developers to work on the same project simultaneously without interfering with each
-      other's progress. 
-      Version storage: Git can manage multiple versions of a project, keeping the source code organized.
-      Previous version restoration: Git can help restore previous versions of a project.
+      <p>Developers use Git, an open-source version control system, for a number of reasons, including: 
+<br>Efficiency:<br>
+Git helps developers be more efficient by eliminating the time and effort spent passing commits over a network connection. 
+<br>Collaboration:<br> 
+Git allows multiple people to work on a project simultaneously, and automatically merges changes so that no one loses their work. 
+<br>Version control:<br>
+Git tracks changes to files, so developers can revert to previous versions or share changes with the team. 
+<br>Offline work:<br>
+Git allows developers to work on their own computer without connecting to a company's servers. 
+<br>Undoing mistakes<br>
+Git allows developers to undo almost anything, which can help them try out new ideas without risking breaking things. 
+<br>Documentation:<br>
+Git can help developers create documentation by allowing them to easily compare code from one push to another. 
+<br>Portfolio:<br>
+Developers can use GitHub to showcase their work and invite others to contribute to their projects. 
+
     </p>
       <a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank"><button>Read More</button></a>
 
     </article>
     <article class="card">
-      <img src="photos/branch.png" class="photo-card">
+      <img src="photos/branch2.png" class="photo-card">
       <h2>What is a branch in Git?</h2>
       <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no
       matter how big or how small—you spawn a new branch to encapsulate your changes.</p>
