gap between the articles done and border

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>Git and uses</h1>
+    <h1>GIT Control Versions</h1>
     <p>
       Git is a free and open source distributed version control system designed to handle everything from small to very
       large projects with speed and efficiency.
