Added class container div

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+   <div class="container">
+  </div>
+     
+
+     
 </body>
 </html>
+
+<!-- Add your HTML markup here -->
+    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
