Using the :first-child pseudo-class

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,52 +3,63 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git and Github Fundamentals</title>
-    <link rel="stylesheet" href="css/style.css" />  
+    <title>Wireframe</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header>
+      <section class="git-info" first-child pseudo-class>
+       <h1> All about GIT </h1>
+       <p>In this article,we are going to learn about <b>GIT</b> and its <b>FUNCTION</b>.
+      </p>
+      <img class="git-logo"
+           src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png"
+           alt="git logo" >
+      </section>
+    </header>
     <main>
-    <header> <H1> GIT </H1><P>In this article,we are going to learn about <b>GIT</b> and its <b>function</b>.</P>
-      <article>
-        <h1>What is Git?</h1>
-        <p>
+    <article id="article-1">
+    <div class="container">
+      <h1>What is Git?</h1>
+      <p>
           Git is a distributed version control system that allows developers to
           track changes in their code and collaborate on projects efficiently.
           It enables multiple contributors to work on the same project
           simultaneously while keeping a complete history of changes, making it
           easy to revert to previous versions if needed.
-        </p>
-      </article>
-      <article>
-        <h1>Why do developers need Git?</h1>
-        <p>
+      </p>
+      <a href="https://www.w3schools.com/git/default.asp" target="_blank">Read more</a>
+    </div>
+    </article>
+    <article>
+      <img class="developer-image"
+           src="https://files.oaiusercontent.com/file-IrS4J1PBYvFUo9jJ9NBD84vN?se=2024-10-09T13%3A29%3A02Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D00791aac-7a8f-4783-ad26-0dfd3b9cb4d4.webp&sig=0nt4SuMc9Szr3ab7XZmCQeHAuSMqSzepUhRZqe87ZDA%3D"
+           alt="a man who is sitting infront of his computer thinking about what is git?">
+      <h1>Why do developers need Git?</h1>
+      <p>
           Git supports branching and merging, allowing developers to experiment
           with new features without affecting the main codebase. Its
           decentralized nature means that every contributor has a full copy of
           the repository, enhancing collaboration and minimizing the risk of
           data loss.
         </p>
+        <a href=" https://www.nobledesktop.com/blog/what-is-git-and-why-should-you-use-it" target="_blank">Read more</a>
       </article>
       <article>
         <h1>What is a branch in Git?</h1>
         <p> In Git, a branch is a new/separate version of the main repository.</p>
+        <a href="https://www.w3schools.com/git/git_branch.asp#:~:text=In%20Git%2C%20a%20branch%20is%20a,new%2Fseparate%20version%20of%20the%20main%20repository." target="_blank">Read more</a>
       </article>
-    </header>
 </main>
-
 <footer>
-  <div class="footer-container">
-      <!-- Social Links Column -->
-      <div class="footer-column footer-social">
-       <h3>Follow Us</h3>
-        <a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-        <a href="https://instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-      </div>
-
-  </div>
-
+  <p>&copy; 2024 My Awesome Website. All rights reserved.</p>
+  <nav>
+    <ul>
+      <li><a href="privacy.html">Privacy Policy</a></li>
+      <li><a href="terms.html">Terms of Service</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+  </nav>
 </footer>
 
   </body> 
