Implement PR Feedback
-Resolve error flagged by checked validator
-Reduce the content of header.
-Replace button within anchor tag to CCS defined button

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Git Essentials</title>
-  <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,54 +17,62 @@
 
   <header>
     <h1>Version Control System</h1>
-    <p>Version control, also known as source control, is the practice of tracking and managing changes to software
-      code.
-    Version control systems (VCS ) are software tools that help software teams manage changes to source code over
-      time.
-    VCS tools have seen great improvements over the past few decades and some are better than others.
-      One of the most popular VCS tools in use today is called <strong><em>Git</em></strong>.
+    <p>One of the most popular Version control systems tools in use today is called <strong><em>Git</em></strong>.
+
+
     </p>
   </header>
   <main>
     <article>
-      <div id="article-one-title">
+      <div id="article-first-child-title">
         <img src="./Images/Gitlogo.png" alt="Git logo" id="git-logo">
         <h2 id="article-one-h2-margin">What is Git?</h2>
       </div>
       <p>
-        Git is a version control software that allows developers to create and manage different versions of a project. It is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
+        Git is a version control software that allows developers to create and manage different versions of a project.
+        It is a free and open source distributed version control system designed to handle everything from small to very
+        large projects with speed and efficiency.
       </p>
-      <a href="https://www.atlassian.com/git/tutorials/what-is-git" target="_blank"><button class="btn-format">Read More</button></a>
+      <a href="https://www.atlassian.com/git/tutorials/what-is-git" target="_blank" class="button">Read More</a>
     </article>
 
     <div id="other-article-title">
       <article class="article-two-three-width">
         <h2>Why do developers need Git?</h2>
-        <p>
-          Developers need Git because it helps with source code management and collaboration. Git allows multiple developers to work on a project simultaneously. Git tracks changes to files, including who made them and when. <br>This allows developers to manage multiple versions of a project and revert to previous versions if needed.
+        <p class="section-content">
+          Developers need Git because it helps with source code management and collaboration. Git allows multiple
+          developers to work on a project simultaneously. Git tracks changes to files, including who made them and when.
+          This allows developers to manage multiple versions of a project and revert to previous versions if needed.
+          This allows developers to manage multiple versions of a project and revert to previous versions if needed.
         </p>
-        <a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank"><button class="btn-format">Read More</button></a>
+        <a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank" class="button">Read
+          More</a>
       </article>
-  
+
       <article class="article-two-three-width">
         <h2>What is a branch in Git?</h2>
-        <p>
-          A branch in Git is simply a lightweight movable pointer to snapshot of changes (commits) in the code base.</p> <p>In Git, there is a special branch (default) which holds the aggregated changes. It is often name master or main. Only changes that have been agreed upon by the team is merged into the main branch. Collaborators/Developers will cut out from main to an experimental/feature branch to their development work.
+        <p class="section-content">
+          A branch in Git is simply a lightweight movable pointer to snapshot of changes (commits) in the code base.<br>
+          In Git, there is a special branch (default) which holds the aggregated changes. It is often name master or
+          main. Only changes that have been agreed upon by the team is merged into the main branch.
+          Collaborators/Developers will cut out from main to an experimental/feature branch to their development work.
         </p>
-        <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank"><button class="btn-format">Read More</button></a>
+        <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank"
+        class="button" id="btn-format">Read More</a>
+
       </article>
 
     </div>
 
   </main>
-   <!-- Footer Section -->
-   <footer>
+  <!-- Footer Section -->
+  <footer>
     <p>Learning and Exploring Web Development Skills at Code Your Future.</p>
-    <b>
-    <p>&copy 2024</p>
-  </b>
-</footer>
+
+    <p><strong>&copy; 2024</strong></p>
+
+  </footer>
 
 </body>
 
-</html
+</html>
