Did an alt update

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -15,7 +15,7 @@
         <header class="container">
           <h1>Git</h1>
           <p>A Distributed Version Control System</p>
-          <img src="/Wireframe/git.png" alt="A git logo">
+          <img src="/Wireframe/git.png" alt="Git logo">
         </header>
         <article class="container cont-art">
           <h2>What is Git?</h2>
