Commit meta update

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about Git, a distributed version control system, its advantages, and how it helps developers manage projects efficiently.">
+
     <title>What is Git?</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
