--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,28 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My form exercise</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Product Pick</h1>
-  </header>
-  <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>My form exercise</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Product Pick</h1>
+    </header>
+    <main>
+      <form action="#" method="get" enctype="multipart/form-data">
+        <div class="shop">
+          <input
+            type="text"
+            name="full name"
+            placeholder="Full Name"
+            value=""
+          />
+        </div>
 
-  </main>
-  <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
-  </footer>
-</body>
+        <div class="shop">
+          <input type="email" name />
+        </div>
 
+        <h3>Choose color of the T-Shirt</h3>
+
+        <div class="shop">
+          <p class="color">
+            <input type="radio" name="color" value="white" />White
+          </p>
+          <p class="color">
+            <input type="radio" name="color" value="black" />Black
+          </p>
+          <p class="color">
+            <input type="radio" name="color" value="yellow" />Yellow
+          </p>
+        </div>
+      </form>
+
+      <!-- <div class="shop">
+        <p class="size"><input type="radio" name="size" value="xs" />XS</p>
+
+        <p class="size"><input type="radio" name="size" value="s" />S</p>
+
+        <p class="size"><input type="radio" name="size" value="m" />M</p>
+
+        <p class="size"><input type="radio" name="size" value="l" />L</p>
+
+        <p class="size"><input type="radio" name="size" value="xl" />XL</p>
+
+        <p class="size"><input type="radio" name="size" value="xxl" />XXL</p>
+      </div> -->
+      <h3>Choose your size of the T-Shirt</h3>
+      <select name="size" id="">
+        <option value="XS">XS</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+      </select>
+
+      <div class="submit">
+        <button type="submit" class="btn">Submit</button>
+      </div>
+    </main>
+    <footer>
+      <!-- change to your name-->
+      <h2>By HOMEWORK SOLUTION</h2>
+    </footer>
+  </body>
 </html>
