--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <header>
+
+      </header>
+      <main>
+        <section class="main_section">
+
+        </section>
+        <section class="secondary_section_wrapper">
+
+        </section>
+      </main>
+      <footer>
+
+      </footer>
 </body>
 </html
