--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -6,9 +6,8 @@
   <title>Form Control</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  <meta name="description" content="A product selection form for choosing T-shirt color, size, and delivery date.">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,13 +15,13 @@
     <h1>Product Pick</h1>
   </header>
   <main class="container">
-  <form  action="#" method="get">
-    <fieldset>
-      <legend>Your Details:</legend>
-      <label for="user-name">
-        Name:
-        <input type="text" name="name" id="user-name" placeholder="Enter name" minlength="3" required>
-      </label> <br /><br />
+    <form  action="#" method="get">
+      <fieldset>
+       <legend>Your Details:</legend>
+          <label for="user-name">
+            Name:
+            <input type="text" name="name" id="user-name" placeholder="Enter name" minlength="3" required>
+          </label> <br /><br />
        
       <label for="user-email">
         Email:
@@ -58,8 +57,8 @@
 
   </form>
   </main>
-  <footer>
-    <h2>By Simphiwe Mabuya</h2>
-  </footer>
+     <footer>
+        <p>By Simphiwe Mabuya</p>
+     </footer>
 </body>
 </html>
