added submit button to html

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -44,6 +44,8 @@
           <input type="date" id="date" name="date">
         </fieldset>
 
+        <button type="submit">Place your order</button>
+
       </form>
 
     </div>
