added the select tag for size and color

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -31,10 +31,24 @@
         <fieldset>
           <legend> Order details</legend>
           <p>Please select the color and size.</p>
-          <label for="size">Size</label>
-          <input type="text">
-          <label for="color">color</label>
-          <input type="text">
+          <label for="color">Choose T-shirt color:</label>
+          <select name="color" id="color">
+            <option selected>Select one...</option>
+            <option value="black">Black</option>
+            <option value="white">White</option>
+            <option value="pinl">Pink</option>
+          </select>
+          <label for="size">Choose your size:</label>
+          <select name="size" id="size">
+            <option selected>Select one...</option>
+            <option value="xsmall">XS</option>
+            <option value="small">S</option>
+            <option value="medium">M</option>
+            <option value="large">L</option>
+            <option value="xlarge">XL</option>
+            <option value="xxlarge">XXL</option>
+          </select>
+       
         </fieldset>
 
         <fieldset>
