--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,11 +13,16 @@
 
       </header>
       <main>
-        <section class="main_section">
+        <section class="section_main">
 
         </section>
-        <section class="secondary_section_wrapper">
+        <section class="section_secondary_wrapper">
+          <article class="article_left">
 
+          </article>
+          <article class="article_right">
+
+          </article>
         </section>
       </main>
       <footer>
