--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,23 +10,36 @@
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
       <header>
-
+        <h1>
+          Git
+        </h1>
+        <h2>
+          The most popular version control tool
+        </h2>
       </header>
       <main>
         <section class="section_main">
-
+          <h1>
+            What is Git?
+          </h1>
         </section>
         <section class="section_secondary_wrapper">
           <article class="article_left">
-
+            <h2>
+              Why do developers need Git?
+            </h2>
           </article>
           <article class="article_right">
-
+            <h2>
+              What is a branch in Git?
+            </h2>
           </article>
         </section>
       </main>
       <footer>
-
+        <article>
+          © Stanislav Starishko - 2024
+        </article>
       </footer>
 </body>
 </html
