--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-      <header>
-        <h1>
-          Git
-        </h1>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wireframe</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <!-- Add your HTML markup here -->
+  <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+  <header>
+    <div class="div_header">
+      <h1>
+        Git
+      </h1>
+      <h2>
+        The most popular version control tool
+      </h2>
+    </div>
+  </header>
+  <main>
+    <section class="section_main">
+      <h1>
+        What is Git?
+      </h1>
+    </section>
+    <section class="section_secondary_wrapper">
+      <article class="article_left">
         <h2>
-          The most popular version control tool
+          Why do developers need Git?
         </h2>
-      </header>
-      <main>
-        <section class="section_main">
-          <h1>
-            What is Git?
-          </h1>
-        </section>
-        <section class="section_secondary_wrapper">
-          <article class="article_left">
-            <h2>
-              Why do developers need Git?
-            </h2>
-          </article>
-          <article class="article_right">
-            <h2>
-              What is a branch in Git?
-            </h2>
-          </article>
-        </section>
-      </main>
-      <footer>
-        <article>
-          © Stanislav Starishko - 2024
-        </article>
-      </footer>
+      </article>
+      <article class="article_right">
+        <h2>
+          What is a branch in Git?
+        </h2>
+      </article>
+    </section>
+  </main>
+  <footer>
+    <article>
+      © Stanislav Starishko - 2024
+    </article>
+  </footer>
 </body>
+
 </html
