--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,12 +3,80 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title>Wire frame</title>
     <link rel="stylesheet" href="style.css">
+    
   </head>
-  <body>
+  <body class="body">
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <main> 
+  </body>
+          <h1>welcome to learn  git</h1>
+          <p> Git allows multiple developers to collaborate on a project simultaneously, managing changes efficiently and securely.</p>
+        </header>
+        <section class="sec-1">
+          <h2>what is Git?</h2>
+          <p>
+
+Git is a distributed version control system designed to track changes in files and facilitate collaboration among multiple developers. Here are some key features of Git:
+
+
+
+  <li> Version Control: Git records changes to files over time, allowing users to revert to previous versions if needed.
+
+  </li>
+  <li>
+    Distributed System: Unlike centralized version control systems, every developer has a complete copy of the repository, including its history, on their local machine. This enables offline work and enhances collaboration.
+
+  </li>
+<li>
+  Branching and Merging: Git allows users to create branches for experimentation without affecting the main codebase. Branches can be merged back into the main branch when changes are ready.
+
+</li>
+<li>
+  Collaboration: Multiple developers can work on the same project simultaneously. Git handles conflicts that may arise from concurrent changes, allowing for smoother teamwork.
+
+</li>
+</ol>
+</li>
+<a href="https://github.blog/developer-skills/programming-languages-and-frameworks/what-is-git-our-beginners-guide-to-version-control/" target="_blank">learn more</a>
+</nav>
+          </p>
+        </section>
+        <div>
+          <section>
+            <h3>Why do developers need git?</h3>
+            <P>
+              Developers use Git because it's a free and open-source version control system that helps with source code management, collaboration, and efficiency
+
+            </P>
+            <div class="nav">
+            <nav >
+            <a href="https://www.quora.com/Why-do-all-programmers-use-Gitt"target="_blank">Read more</a>
+            </nav>
+          </section>
+        </div>
+        <section>
+          <h4>
+            What is a branch in Git?
+            <p>
+              <nav>
+              Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes.
+              <nav>
+              ">
+              <a href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=Git%20branches%20are%20effectively%20a,branch%20to%20encapsulate%20your%20changes.">Explore more.</a>
+              </nav>
+            </p>
+          </h4>
+        </section>
+      </div>
+      </main>
+        <footer> <p>sara amiri
+          code your future 
+        </p> 
+          
+        </footer> 
 </body>
 </html>
 
