Links were added

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -19,6 +19,7 @@
       <article> 
         <h2>What is Git?</h2>
         <p>Git is a distributed version control system used to track changes in source code during software development.</p>
+        <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read more here</a>
       </article>
     </div>
     <div id="secondFirstArticle">
@@ -32,10 +33,12 @@
           <li>Accountability</li>
         </ul>
         <p>Its ability to handle multiple versions of a project and resolve conflicts makes it indispensable for modern software development, especially when working in teams.</p>
+        <a href="https://careerfoundry.com/en/blog/web-development/what-do-developers-use-github-for-heres-why-its-vital/" target="_blank">Read more here</a>
       </article>
       <article class="column">
         <h2>What is a branch in Git?</h2>
         <p>In GitHub, a branch is an independent line of development within a repository. Branches allow developers to work on features, bug fixes, or experiments in isolation from the main codebase (often called the "main" or "master" branch). This means you can make changes without affecting the stable version of your project.</p>
+        <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank">Read more here</a>
       </article>
 
     </div>
