--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,7 @@
   <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" type="image/x-icon" href="img/github-logo-5F384D0265-seeklogo.com.png" />
   <script src="https://kit.fontawesome.com/c0b874b18b.js" crossorigin="anonymous"></script>
-  <title>Git Wireframe</title>
+  <title>Git WireFrame</title>
   <link rel="stylesheet" href="/Wireframe/css/style.css">
 </head>
 
@@ -22,7 +22,7 @@
   <main>
     <section class="hero">
       <div>
-        <img src="/Wireframe/img/git.giff.webp" alt="" class="img-hero">
+        <img src="/Wireframe/img/giff.gif" alt="" class="img-hero">
       </div>
       <h2>What is Git</h2>
       <p class="overlay">
@@ -41,7 +41,8 @@
         <div>
           <img src="/Wireframe/img/git.jpg" alt="image of git" class="img-article">
         </div>
-        <p>
+        <h2>What is Git</h2>
+        <p class="overlay">
           Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
           covered!
           Web developers perform important functions, like creating websites, maintaining the back-end of applications
@@ -52,7 +53,6 @@
           junior
           developer, it's helpful to learn more about the position and the steps needed to begin your career.
         </p>
-        <h2>What is Git</h2>
         <button class="btn-article">I am button</i></button>
       </article>
 
@@ -60,7 +60,8 @@
         <div>
           <img src="/Wireframe/img/git.png" alt="image of git" class="img-article">
         </div>
-        <p>
+        <h2>What is Git</h2>
+        <p class="overlay">
           Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
           covered!
           Web developers perform important functions, like creating websites, maintaining the back-end of applications
@@ -71,21 +72,20 @@
           junior
           developer, it's helpful to learn more about the position and the steps needed to begin your career.
         </p>
-        <h2>What is Git</h2>
         <button>I am button</button>
       </article>
     </section>
   </main>
-  <footer class="data">
-    <p class="media-text">&copy  <i class="fa-regular fa-face-laugh-wink"></i></p>
+  <footer>
+    <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"></i></p>
     <div class="social">
-      <a class="facebook" href="https://www.facebook.com/groups/front.designer"><i
-          class="fa-brands fa-facebook"></i></a>
+      <a class="facebook" href="https://www.facebook.com/groups/front.designer"><i class="fa-brands fa-facebook"></i></a>
       <a class="twitter" href="https://twitter.com/explore"><i class="fa-brands fa-twitter"></i></a>
       <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4"><i class="fa-brands fa-youtube"></i></a>
-      <a class="instagram" href="https://www.instagram.com/victorroblesweb/"><i class="fa-brands fa-instagram"></i></a>
-      <a class="github" href="https://github.com/karlagLuna"><i class="fa-brands fa-github"></i></a>
+      <a class="instagram" href="https://www.instagram.com/codeyourfuture_/?hl=es"><i class="fa-brands fa-instagram"></i></a>
+      <a class="github" href="https://github.com/Grajales-K"><i class="fa-brands fa-github"></i></a>
+    </div>
   </footer>
-</body>
 
-</html
+</body>
+</html>
