--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -50,32 +50,32 @@
             />
           </div>
 
-          <h3>Choose color of the T-Shirt</h3>
+          <h2>Choose color of the T-Shirt</h2>
 
           <div class="shop">
-            <p class="color">
-              <input type="radio" name="color" value="white" />White
-            </p>
-            <p class="color">
-              <input type="radio" name="color" value="black" />Black
-            </p>
-            <p class="color">
-              <input type="radio" name="color" value="yellow" />Yellow
-            </p>
+            <input type="radio" id="white" name="color" value="white" />
+            <label for="white">White</label>
+
+            <input type="radio" id="black" name="color" value="black" />
+            <label for="black">Black</label>
+            <input type="radio" id="yellow" name="color" value="yellow" />
+            <label for="yellow">Yellow</label>
           </div>
 
-          <h3>Choose your size of the T-Shirt</h3>
-          <select name="size" id="">
-            <option value="XS">XS</option>
-            <option value="S">S</option>
-            <option value="M">M</option>
-            <option value="L">L</option>
-            <option value="XL">XL</option>
-            <option value="XXL">XXL</option>
+          <h2>Choose your size of the T-Shirt</h2>
+          <label for="select-size">Select size</label>
+          <select name="size" id="select-size">
+            <option label="XS">XS</option>
+            <option label="S">S</option>
+            <option label="M">M</option>
+            <option label="L">L</option>
+            <option label="XL">XL</option>
+            <option label="XXL">XXL</option>
           </select>
 
           <div class="shop">
             <h3>When do you want the t-shirt to be delivered?</h3>
+            <label for="date">Enter Date:</label>
             <input
               type="date"
               id="date"
@@ -90,10 +90,10 @@
           </div>
         </form>
       </main>
+      <footer class="footer">
+        <!-- change to your name-->
+        <h2>By Denis Suvorov HOMEWORK SOLUTION</h2>
+      </footer>
     </div>
-    <footer class="footer">
-      <!-- change to your name-->
-      <h2>By Denis Suvorov HOMEWORK SOLUTION</h2>
-    </footer>
   </body>
 </html>
